src/Components/Navbar/navbar.scss
@import '../../color.scss';
@import url('https://fonts.googleapis.com/css2?family=Schoolbell&display=swap');

.header {
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    background: $background-color;
    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
    width: 100%;
    display: flex;
    align-items: center;
    z-index: 1;
    justify-content: space-between;
    padding: 0 5%;
}
.navlogo{
    text-align: center;
    display: flex;
    justify-content: center;
    padding: 5px 0;
    
    cursor: pointer;


    &:hover {
        color:white;
        // font-size: 1.3rem;
    }
}

.navbar {
    margin: 0 auto;
    position: right;
}
.nav-list-container{
    display: flex;
    align-items: center;

}

    .nav-list-item-mobile, .nav-list-item{
        display: flex;
        gap: 1rem;
        list-style: none;
        margin-left: 1.5rem;
        font-family: $font-family;
        padding: 0%;
        color: $the-dot-docoration-color;
        cursor: pointer;

        .nav-link {
            font-size: 0.75rem;
            text-decoration: none;
            text-transform: uppercase;
            color: $the-dot-docoration-color;
            
            cursor: pointer;
            transition: ease-out 0.2s;
            border-bottom: 3px solid none;
           

            &:hover {
                color: $heading-text-colors;
            }
        } 
    }
    .nav-list-item-mobile-inner-div{
        display: flex;
        justify-content: space-between;
        align-items: center;
        width: 100%;
    }
    
    
    //NAV MODAL 
    .nav-menu-icon-container{
        display: flex;
        justify-content: center;
        align-items: center;
        color: white;
    }
    
   
    .nav-menu-modal-container{
        position: absolute;
        height: 100vh;
        width: 100vw;
        top:70px;
        left: 0;
        background-color: $background-color;   
    }
    

    .nav-menu-modal-container{
        display: flex;
        flex-direction: column;
        padding: 0 5%;
    }
    .nav-list-container-mobile{
        width: 100%;
        padding: 0;

        
    }
   
    .nav-list-item-mobile{
        border-top: 1px solid rgba(#546A93, 0.2);
        list-style-type: none;
        margin: 0;
        padding: 4% 0;   
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
     }
   

     .nav-list-item-mobile:nth-child(1){
        border-top: 2px solid rgba(#546A93, 0.6);
     }
    //  .nav-list-item-mobile:nth-child(5){
    //     border-top: 2px solid rgba(#546A93, 0.6);
    //  }
     .nav-list-item-mobile:last-child{
        border-bottom: 1px solid rgba(#546A93, 0.3);
     }
     .nav-list-item-mobile:nth-child(1n+5){
        justify-content: start;
        gap: 1rem;
     }

     .nav-list-item-anchor{
        text-decoration: none;
     }
    
     .modal-icon-container{
        display: flex;
        flex-direction: column;
     }
   
     .nav-mobile-modal-icon-container{
        display: flex;
        flex-direction: row;
     }
     .modal-menu-name{
        color: $the-dot-docoration-color;
        padding: 0;
        margin: 0;
     }
  
//MEDIA QUERIES

//DESKTOP

@media  (max-width:480px){
    .logo-image{
        width: 50px;
    }
   .nav-list-item {
    margin: 0.7rem;


        .nav-link{
        font-size: 0.6rem;
        
        }
   }
  
}    
@media  (min-width:481px){
    .logo-image{
        width: 60px;
    }
}

